--- a/ua/libuamappings/Makefile.am
+++ b/ua/libuamappings/Makefile.am
@@ -15,20 +15,21 @@ opcuaincludedir = $(opcincludedir)/ua
 
 opcuainclude_HEADERS = \
   include/opc/ua/protocol/attribute.h \
-  include/opc/ua/protocol/endpoints.h \
-  include/opc/ua/protocol/types.h \
   include/opc/ua/protocol/binary/stream.h \
   include/opc/ua/protocol/binary/common.h \
   include/opc/ua/protocol/binary/secure_connection.h \
-  include/opc/ua/protocol/variant.h \
-  include/opc/ua/protocol/secure_channel.h \
+  include/opc/ua/protocol/data_value.h \
   include/opc/ua/protocol/datetime.h \
+  include/opc/ua/protocol/endpoints.h \
   include/opc/ua/protocol/guid.h \
+  include/opc/ua/protocol/monitored_items.h \
   include/opc/ua/protocol/nodeid.h \
-  include/opc/ua/protocol/view.h \
+  include/opc/ua/protocol/secure_channel.h \
   include/opc/ua/protocol/session.h \
   include/opc/ua/protocol/subscriptions.h \
-  include/opc/ua/protocol/data_value.h \
+  include/opc/ua/protocol/types.h \
+  include/opc/ua/protocol/variant.h \
+  include/opc/ua/protocol/view.h \
   include/opc/ua/describe.h \
   include/opc/ua/extension_identifiers.h \
   include/opc/ua/attribute_ids.h \
@@ -44,16 +45,17 @@ lib_LIBRARIES = libopcuabinary.a
 
 libopcuabinary_a_SOURCES = \
   src/binary_variant.cpp \
+  src/binary_attribute.cpp \
   src/binary_data_value.cpp \
   src/binary_endpoints.cpp \
   src/binary_messages.cpp \
-  src/binary_serialization.h \
   src/binary_raw_size.cpp \
-  src/binary_stream.cpp \
-  src/binary_attribute.cpp \
-  src/binary_view.cpp \
-  src/binary_session.cpp \
   src/binary_secure_channel.cpp \
+  src/binary_session.cpp \
+  src/binary_serialization.h \
+  src/binary_stream.cpp \
+  src/binary_view.cpp \
+  src/monitored_items.cpp \
   src/nodeid.cpp \
   src/subscriptions.cpp
 
@@ -65,13 +67,14 @@ check_PROGRAMS = $(TESTS)
 
 opc_ua_binary_test_SOURCES =  \
  tests/binary_deserialize.cpp \
+ tests/binary_serialize.cpp \
  tests/binary_serialize_attribute.cpp \
  tests/binary_serialize_data_value.cpp \
  tests/binary_serialize_endpoints.cpp \
+ tests/binary_serialize_monitored_items.cpp \
  tests/binary_serialize_session.cpp \
  tests/binary_serialize_variant.cpp \
  tests/binary_serialize_view.cpp \
- tests/binary_serialize.cpp \
  tests/binary_subscriptions.cpp \
  tests/common.h \
  tests/message_id.cpp \
