--- a/ua/server/configs/server.config
+++ b/ua/server/configs/server.config
@@ -21,8 +21,8 @@
     </module>
 
     <module>
-      <id>view_services</id>
-      <path>libview_services_addon.so</path>
+      <id>address_space</id>
+      <path>libaddress_space_addon.so</path>
       <depends_on>
         <id>internal_computer</id>
       </depends_on>
